styles/main.css
body {
  font-family: 'Comic Sans MS', monospace;
  text-align: center;
  margin: auto;
  box-sizing: border-box;
  background-color: rgb(38, 68, 95);
}

/* Below is my grid stuff, I made it mobile responsive first*/
/* Contains everything on my page */
.container {
  display: grid;
  grid-template-columns: auto;
  grid-template-rows: 1fr auto auto;
  grid-template-areas:
    'header'
    'page-content';
  gap: 1rem;
  background-color: rgb(38, 68, 95);
}

/* CSS for header class */
.header {
  grid-area: 'header';
  background-color: rgb(49, 49, 49);
  background-image: url(/images/header-background.jpg);
  padding: 2rem;
  box-shadow: 1rem 1.5rem 2rem -2rem black;
  border-bottom: 1px solid black;
}

/* CSS for main page stuff */
.page-content {
  margin-left: 2rem;
  margin-right: 2rem;
  margin-top: 1rem;
  background-color: rgb(233, 233, 233);
  display: grid;
  grid-template-rows: 1fr;
  padding: 2rem;
  box-shadow: 0 0 1rem black;
}

.article-format {
  display: grid;
  border-radius: 0.5rem;
  border: 2px solid rgb(24, 24, 24);
  grid-template-columns: auto;
  grid-template-rows: 2fr;
  grid-template-areas:
    'a-header'
    'a-text'
    'a-button';
}

.article-header {
  grid-area: a-header;
}

.article-text {
  grid-area: a-text;
  margin: 1rem;
}

.article-button {
  grid-area: a-button;
}
/* Footer CSS */
footer {
  margin-left: 2rem;
  margin-right: 2rem;
  margin-bottom: 1rem;
  background-color: rgb(233, 233, 233);
  display: grid;
  grid-template-rows: 1fr;
  padding: 0.5rem;
  box-shadow: 0 0 1rem black;
}

/* Logo in the header */
.logo {
  width: auto;
  height: 7rem;
  grid-area: logo;
  margin: auto;
  margin-top: 1rem;
  display: block;
}

.funnypic {
  margin: auto;
}

/* Below is the css for grid area declaration */
.home {
  grid-area: home;
}

.tech-blog {
  grid-area: tech-blog;
}

.hs-blog {
  grid-area: hs-blog;
}

/* Below is the css for my buttons */
.button {
  box-sizing: border-box;
  text-align: center;
  display: block;
  border-radius: 0.5rem;
  margin: 2rem auto;
  text-decoration: none;
  min-width: 8rem;
  max-width: 30%;
  justify-self: center;
  background-color: rgb(51, 51, 51);
  color: white;
  border: 2px solid rgb(24, 24, 24);
  box-shadow: 1rem solid black;
  text-decoration: none;
  line-height: 1rem;
  padding: 1.2rem;
}

/* Shows that user is hovering over buttons*/
.button:hover {
  text-decoration: underline black;
  background-color: rgb(102, 102, 102);
  color: black;
}

/* Tablet view of webpage*/
@media only screen and (min-width: 48rem) {
  .container {
    grid-template-columns: auto;
    grid-template-rows: 0.3fr 2fr;
  }

  .header {
    display: grid;
    grid-template-columns: 1fr 0.5fr 0.5fr 0.5fr;
    grid-template-rows: 1fr;
    grid-template-areas: 'logo home tech-blog hs-blog';
    align-items: center;
    justify-content: center;
    line-height: 0.5rem;
  }

  .button {
    margin-left: 1rem;
    min-width: none;
  }

  .logo {
    width: 16rem;
  }

  .page-content {
    margin-left: 5rem;
    margin-right: 5rem;
    margin-top: 3rem;
  }

  footer {
    margin-left: 5rem;
    margin-right: 5rem;
  }

  .article-button {
    grid-area: a-button;
    margin: 1rem;
  }
}

/* Desktop view of webpage*/
@media only screen and (min-width: 64rem) {
  .header {
    grid-template-columns: 2fr 0.5fr 0.5fr 0.5fr;
  }
  .logo {
    margin: 1rem;
    width: 30rem;
  }
  .page-content {
    margin-left: 12rem;
    margin-right: 12rem;
    margin-top: 5rem;
  }

  footer {
    margin-left: 12rem;
    margin-right: 12rem;
  }

  .article-button {
    grid-area: a-button;
    margin: 1rem;
  }
}

